--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                     <i class="fas fa-angle-left"></i>
                 </div>
                 <div class="images">
-                    <img class="active first" src="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?cs=srgb&dl=clouds-country-daylight-371633.jpg&fm=jpg" alt="">
-                    <img src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-646511634.jpg" alt="">
-                    <img src="https://cdn.mos.cms.futurecdn.net/FUE7XiFApEqWZQ85wYcAfM.jpg" alt="">
-                    <img class="last" src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-546424192.jpg" alt="">
+                    <img id ="primo"class="active first" src="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?cs=srgb&dl=clouds-country-daylight-371633.jpg&fm=jpg" alt="">
+                    <img id ="sec"  src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-646511634.jpg" alt="">
+                    <img id ="ter"  src="https://cdn.mos.cms.futurecdn.net/FUE7XiFApEqWZQ85wYcAfM.jpg" alt="">
+                    <img id ="qua" class=" last" src="https://static.photocdn.pt/images/articles/2017/04/28/iStock-546424192.jpg" alt="">
                 </div>
                 <div class="next">
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <div class="nav">
-                    <i class="fas fa-circle active first"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle last"></i>
+                    <i  class=" a fas fa-circle active first"></i>
+                    <i  class="b fas fa-circle"></i>
+                    <i  class="c fas fa-circle"></i>
+                    <i  class="d fas fa-circle last"></i>
                 </div>
             </div>
         </div>
